working on jinja

--- a/expert-net-mockup-1/data.yaml
+++ b/expert-net-mockup-1/data.yaml
@@ -1,5 +1,7 @@
 ---
-name:       Hannah Cutler
+fullname:   Hannah Cutler
+firstname:  Hannah
+lastname:   Cutler
 position:   Undergraduate
 department: CIS
 school:     Penn Engineering
