--- a/cds-nyu/cds-data.yaml
+++ b/cds-nyu/cds-data.yaml
@@ -1,9 +1,5 @@
-[{expertise: !!python/unicode 'Various aspects of stochastic processes; Diffusion
-      processes and their connection to the theory of partial differential equations;
-      Scaling limits of large systems; Large deviations and the analysis of rare events',
-    name: !!python/unicode 'S. R. Srinivasa Varadhan', title(s): !!python/unicode 'Interim
-      Director of Center for Data Science; Professor of Mathematics'}, {expertise: !!python/unicode 'Astronomy;
-      Cosmology; Probabilistic inference; MCMC', name: !!python/unicode 'David W.
-      Hogg', title(s): !!python/unicode 'Deputy Director of Center for Data Science;
-      Executive Director of the Moore-Sloan Data Science Environment; Associate Professor
-      of Physics'}]
+{titles: !!python/unicode 'Moore-Sloan Data Science Fellow'}
+{fullname: !!python/unicode 'Daniela Huppenkothen'}
+{expertise: !!python/unicode 'High-energy Astrophysics, Black Holes and Neutron Stars,
+    Fourier Methods, Statistical Methods for Astronomical Time Series'}
+{namelink: !!python/unicode '"https://www.linkedin.com/pub/daniela-huppenkothen/7b/4a9/b4"'}
