updated data yaml

--- a/expert-net-mockup-1/data.yaml
+++ b/expert-net-mockup-1/data.yaml
@@ -20,16 +20,25 @@ contact:
     github:     <a href="https://github.com/hcutler/">GitHub</a>
 
 skills:
-    - Python
-    - Java
-    - C
-    - Statistics
+    - Java (proficient)
+    - C (proficient)
+    - LaTeX (proficient)
+    - Python (proficient)
+    - Mandarin Chinese (proficient)
+    - Adobe InDesign (proficient)
+    - Unix (prior experience)
+    - Git (prior experience)
+    - Swift (prior experience)
+    - OCaml (prior experience)
+    - Android (prior experience)
+    - Matlab (prior experience)
+    - XCode (prior experience)
     - ...etc...
 
 sources:
-    - NSF
-    - Wikipedia
     - LinkedIn
     - Twitter
-    - ...etc...
+    - Facebook
+    - GitHub
+    - Personal Resume
 ...
