formatting working finally

--- a/scrapers/wikipedia/people-list copy.yaml
+++ b/scrapers/wikipedia/people-list copy.yaml
@@ -1,3 +1,5 @@
+---
+people:
 - S. R. Srinivasa Varadhan
 - David W. Hogg
 - Juliana Freire
@@ -82,3 +84,4 @@
 - Brian McFee
 - Brenden Lake
 - Daniela Huppenkothen
+...
