--- a/wiki-data.yaml
+++ b/wiki-data.yaml
@@ -1,4 +1,4 @@
-- CATEGORIES:
+- categories:
   - 1940 births
   - 20th-century mathematicians
   - 21st-century mathematicians
@@ -34,7 +34,7 @@
   - Wikipedia articles with ISNI identifiers
   - Wikipedia articles with LCCN identifiers
   - Wikipedia articles with VIAF identifiers
-  OUTLINKS:
+  outlinks:
   - A. A. Krishnaswami Ayyangar
   - Abel Prize
   - Achyuta Pisharati
@@ -218,7 +218,7 @@
   - Yuktibhāṣā
   - Āryabhaṭīya
   - Śrīpati
-  REFERENCES:
+  references:
   - http://dx.doi.org/10.1002%2Fcpa.3160190303
   - http://dx.doi.org/10.1073%2Fpnas.72.3.780
   - http://dx.doi.org/10.1090%2Fs0273-0979-02-00968-0
@@ -254,13 +254,326 @@
   - http://www.whitehouse.gov/the-press-office/2011/09/27/president-obama-honors-nation-s-top-scientists-and-innovators
   - https://viaf.org/viaf/59151804
   - https://www.math.lsu.edu/cosa/6-1-00%5Bpartha%5D.pdf
-  SECTIONS: []
-  SUMMARY: 'Sathamangalam Ranga Iyengar Srinivasa Varadhan FRS (born 2 January 1940)
+  sections: []
+  summary: 'Sathamangalam Ranga Iyengar Srinivasa Varadhan FRS (born 2 January 1940)
     is an Indian American mathematician who is known for his fundamental contributions
     to probability theory and in particular for creating a unified theory of large
     deviations.
 
     Since 2009 he has been one of the Jury Chairs for the Infosys Prize in the discipline
     of Mathematical Sciences.'
-  TITLE: <WikipediaPage 'S. R. Srinivasa Varadhan'>
-  URL: http://en.wikipedia.org/wiki/- S. R. Srinivasa Varadhan
+  url: https://en.wikipedia.org/wiki/S._R._Srinivasa_Varadhan
+- categories:
+  - All articles lacking in-text citations
+  - All stub articles
+  - Articles lacking in-text citations from February 2014
+  - New York University
+  - Physics organization stubs
+  outlinks:
+  - Albert Gallatin
+  - Andrew D. Hamilton
+  - Brennan Center for Justice
+  - Brown Building (Manhattan)
+  - Campus of New York University
+  - Casa Italiana Zerilli Marimò
+  - Center on the Administration of Criminal Law
+  - Coles Sports and Recreation Center
+  - Cosmology
+  - Courant Institute of Mathematical Sciences
+  - Deans' Cup
+  - Eastern Intercollegiate Volleyball Association
+  - Elmer Holmes Bobst Library
+  - Eucleian Society
+  - Fales Library
+  - Frederic Ewen Academic Freedom Center
+  - Furman Center for Real Estate and Urban Policy
+  - GNAT
+  - Gallatin School of Individualized Study
+  - Gia Dvali
+  - Graduate Student Organizing Committee
+  - Gregory Gabadadze
+  - High energy physics
+  - History of New York University
+  - Institute for the Study of the Ancient World
+  - James B. Duke House
+  - John Brademas
+  - John Sexton
+  - Kyle Cranmer
+  - La Maison Française
+  - List of New York University alumni
+  - Massimo Porrati
+  - Matthew Kleban
+  - Morgan Lewis (governor)
+  - NYU Annual Survey of American Law
+  - NYU Catherine B. Reynolds Program for Social Entrepreneurship
+  - NYU Langone Medical Center
+  - NYU Local
+  - NYU Violets
+  - NYU Violets men's basketball
+  - New York Institute for the Humanities
+  - New York University
+  - New York University Abu Dhabi
+  - New York University Archives
+  - New York University College of Arts and Science
+  - New York University College of Dentistry
+  - New York University College of Nursing
+  - New York University Graduate School of Arts and Science
+  - New York University Institute of Fine Arts
+  - New York University Journal of International Law and Politics
+  - New York University Law Review
+  - New York University Polytechnic School of Engineering
+  - New York University Press
+  - New York University School of Law
+  - New York University School of Medicine
+  - New York University School of Professional Studies
+  - New York University School of Social Work
+  - New York University Shanghai
+  - New York University Stern School of Business
+  - New York University residence halls
+  - Philomathean Society (New York University)
+  - Physics
+  - Puck Building
+  - Red Dragon Society
+  - Robert F. Wagner Graduate School of Public Service
+  - Root-Tilden Scholarship
+  - Rudin Center for Transportation Policy & Management
+  - Rusk Institute of Rehabilitation Medicine
+  - Silver Center
+  - Skirball Center for the Performing Arts
+  - Steinhardt School of Culture, Education, and Human Development
+  - Student Senators Council of New York University
+  - Tamiment Library and Robert F. Wagner Archives
+  - The Plague (magazine)
+  - Tisch School of the Arts
+  - Union Square, Manhattan
+  - University Athletic Association
+  - University Village (Manhattan)
+  - Villa La Pietra
+  - WNYU-FM
+  - Washington Mews
+  - Washington Square News
+  - Washington Square Park
+  - Washington Square Review
+  - Washington Square Village
+  references:
+  - http://cosmo.nyu.edu/index.html
+  sections: []
+  summary: 'The Center for Cosmology and Particle Physics is a research center at
+    New York University focused on theoretical high energy physics and cosmology.
+
+
+    '
+  url: https://en.wikipedia.org/wiki/Center_for_Cosmology_and_Particle_Physics
+- categories:
+  - American computer scientists
+  - Brazilian computer scientists
+  - Fellows of the Association for Computing Machinery
+  - Information visualization experts
+  - Living people
+  - New York University faculty
+  - Oregon Health & Science University faculty
+  - Stony Brook University alumni
+  - University of Utah faculty
+  - Wikipedia articles with ORCID identifiers
+  - Women computer scientists
+  - Year of birth missing (living people)
+  outlinks:
+  - Association for Computing Machinery
+  - Bell Laboratories
+  - DeepPeep
+  - Federal University of Ceará
+  - Fellow
+  - Information visualization
+  - National Science Foundation
+  - New York Times
+  - New York University Polytechnic School of Engineering
+  - ORCID
+  - Oregon Health & Science University
+  - Provenance
+  - Reproducibility
+  - Stony Brook University
+  - University of Utah
+  - VisTrails
+  references:
+  - http://awards.acm.org/award_winners/freire_nb37655.cfm
+  - http://engineering.nyu.edu/cable/faculty-appointments/2011/november/juliana-freire
+  - http://engineering.nyu.edu/press-release/2015/01/12/nyu-polytechnic-school-engineering-professor-honored-pioneering-work-proven
+  - http://orcid.org/0000-0003-3915-7075
+  - http://vgc.poly.edu/~juliana/
+  - http://www.nsf.gov/discoveries/disc_summ.jsp?org=NSF&cntn_id=114322&preview=false
+  - http://www.nytimes.com/2009/02/23/technology/internet/23search.html
+  - http://www2010.org/www/
+  - https://scholar.google.com/citations?user=sSzAlq0AAAAJ
+  sections: []
+  summary: 'Juliana Freire de Lima e Silva is a Brazilian computer scientist who works
+    as a professor of computer science and engineering at the New York University
+    Polytechnic School of Engineering. She is known for her research in information
+    visualization, data provenance, and computerized assistance for scientific reproducibility.
+
+    Freire did her undergraduate studies at the Federal University of Ceará in Brazil,
+    and earned her doctorate from Stony Brook University. Prior to joining NYU-Poly
+    in 2011, she was a researcher at Bell Laboratories, and a faculty member at the
+    Oregon Health & Science University and the University of Utah.
+
+    Freire''s research projects include the VisTrails scientific workflow management
+    system, and the DeepPeep search engine for web database content.
+
+    Freire was the program co-chair of the WWW2010 conference. In 2014, Freire was
+    elected as a Fellow of the Association for Computing Machinery "for contributions
+    to provenance management research and technology, and computational reproducibility."'
+  url: https://en.wikipedia.org/wiki/Juliana_Freire
+- categories:
+  - 1960 births
+  - All articles lacking reliable references
+  - American computer scientists
+  - American people of French descent
+  - American roboticists
+  - Articles lacking reliable references from July 2009
+  - Artificial intelligence researchers
+  - BLP articles lacking sources from July 2009
+  - Computer vision researchers
+  - Free software programmers
+  - French computer scientists
+  - French roboticists
+  - Living people
+  - Machine learning researchers
+  - Pierre and Marie Curie University alumni
+  - Polytechnic Institute of New York University faculty
+  - Scientists at Bell Labs
+  - Wikipedia articles with VIAF identifiers
+  outlinks:
+  - AT&T Bell Laboratories
+  - AT&T Labs
+  - Alma mater
+  - Back-propagation
+  - CIFAR
+  - Center for Neural Science
+  - Computational neuroscience
+  - Computer Vision
+  - Computer vision
+  - Conditional random field
+  - Convolutional neural network
+  - Courant Institute
+  - Deep learning
+  - Defamation
+  - Digital object identifier
+  - DjVu
+  - Doctoral advisor
+  - ESIEE
+  - Facebook AI Research
+  - France
+  - Geoffrey Hinton
+  - Holmdel
+  - Institute for Pure and Applied Mathematics
+  - Internet Archive
+  - KXEN Inc.
+  - Lawrence Rabiner
+  - Lush (programming language)
+  - Léon Bottou
+  - MIT Press
+  - Machine learning
+  - Mobile robotics
+  - Morgan Kaufmann
+  - MuseAmi
+  - NYU Center for Data Science
+  - Neural Computation & Adaptive Perception
+  - New Jersey
+  - New York City
+  - New York University
+  - Optical character recognition
+  - Paris
+  - Pierre and Marie Curie University
+  - Polytechnic Institute of New York University
+  - Princeton, NJ
+  - Thesis
+  - UCLA
+  - USA
+  - University of Toronto
+  - Vidient Systems
+  - Virtual International Authority File
+  - Vladimir Vapnik
+  - Yoshua Bengio
+  references:
+  - http://dx.doi.org/10.1109%2F5.726791
+  - http://blog.kaggle.com/2014/12/22/convolutional-nets-and-cifar-10-an-interview-with-yan-lecun/
+  - http://cds.nyu.edu
+  - http://djvu.sf.net/
+  - http://lush.sf.net/
+  - http://phdtree.org/scholar/lecun-yann/
+  - http://www.cifar.ca/yann-lecun
+  - http://www.cs.nyu.edu/~yann
+  - http://www.ipam.ucla.edu/programs/gss2012/
+  - http://www.poly.edu/academics/departments/electrical/people
+  - http://www.reddit.com/r/MachineLearning/comments/25lnbt/ama_yann_lecun
+  - http://www.vidient.com/
+  - http://yann.lecun.com
+  - http://yann.lecun.com/
+  - http://yann.lecun.com/exdb/lenet/
+  - http://yann.lecun.com/exdb/publis/
+  - http://yann.lecun.com/exdb/publis/pdf/lecun-01a.pdf
+  - https://research.facebook.com/ai
+  - https://viaf.org/viaf/78444459
+  - https://www.facebook.com/yann.lecun/posts/10151728212367143
+  sections: []
+  summary: 'Yann LeCun (born 1960) is a computer scientist with contributions in machine
+    learning, computer vision, mobile robotics and computational neuroscience. He
+    is well known for his work on optical character recognition and computer vision
+    using convolutional neural networks (CNN), and is a founding father of convolutional
+    nets. He is also one of the main creators of the DjVu image compression technology
+    (together with Léon Bottou and Patrick Haffner). He co-developed the Lush programming
+    language with Léon Bottou.
+
+
+    '
+  url: https://en.wikipedia.org/wiki/Yann_LeCun
+- categories:
+  - All articles with specifically marked weasel-worded phrases
+  - Articles with specifically marked weasel-worded phrases from February 2011
+  - Duquesne University alumni
+  - Living people
+  - New York University faculty
+  - University of Pittsburgh alumni
+  - Wikipedia articles needing clarification from February 2011
+  outlinks:
+  - Bachelor of Science
+  - Duquesne University
+  - Information systems
+  - Machine Learning (journal)
+  - Machine learning
+  - Master of Arts
+  - New York University
+  - Ph.D.
+  - Stern School of Business
+  - University of Pittsburgh
+  references:
+  - http://pages.stern.nyu.edu/~fprovost/
+  - http://www.cs.cornell.edu/projects/kddcup/results.html
+  - http://www.informs.org/Recognize-Excellence/Community-Prizes-and-Awards/Information-Systems-Society/The-Design-Science-Award
+  - http://www.kdd2008.com/awards.html
+  - http://www.sigkdd.org/awards_best_r_paper.php
+  sections: []
+  summary: 'Foster Provost is Professor of information systems and NEC Faculty Fellow
+    at New York University''s Stern School of Business. Professor Provost has a Bachelor
+    of Science from Duquesne University in physics and mathematics and an Master of
+    Arts and Ph.D. in computer science from the University of Pittsburgh.
+
+    Professor Provost is known for his work on evaluating machine learning algorithms
+    using ROC analysis, and for his work on social network analysis for targeted marketing.
+
+    He has won several awards, for his work:
+
+    The 2009 INFORMS Design Science award for social network-based marketing,
+
+    IBM Faculty Awards for outstanding research in data mining and machine learning,
+
+    A President’s Award from NYNEX Science and Technology
+
+    Best Paper Awards from the ACM SIGKDD conference, and
+
+    Awards in SIGKDD’s annual KDDCUP data mining competition.
+
+    Professor Provost recently retired as Editor-in-Chief of the journal Machine Learning
+    after 6 years. He is a member of the editorial boards of the Journal of Machine
+    Learning Research (JMLR) and the journal Data Mining and Knowledge Discover. He
+    was elected as a founding board member of the International Machine Learning Society.'
+  url: https://en.wikipedia.org/wiki/Foster_Provost
