--- a/scrapers/wikipedia/wiki-data.yaml
+++ b/scrapers/wikipedia/wiki-data.yaml
@@ -262,7 +262,7 @@
 
     Since 2009 he has been one of the Jury Chairs for the Infosys Prize in the discipline
     of Mathematical Sciences.'
-  url: https://en.wikipedia.org/wiki/S._R._Srinivasa_Varadhan
+  url: http://en.wikipedia.org/wiki/S._R._Srinivasa_Varadhan
 - categories:
   - All articles lacking in-text citations
   - All stub articles
@@ -363,65 +363,7 @@
 
 
     '
-  url: https://en.wikipedia.org/wiki/Center_for_Cosmology_and_Particle_Physics
-- categories:
-  - American computer scientists
-  - Brazilian computer scientists
-  - Fellows of the Association for Computing Machinery
-  - Information visualization experts
-  - Living people
-  - New York University faculty
-  - Oregon Health & Science University faculty
-  - Stony Brook University alumni
-  - University of Utah faculty
-  - Wikipedia articles with ORCID identifiers
-  - Women computer scientists
-  - Year of birth missing (living people)
-  outlinks:
-  - Association for Computing Machinery
-  - Bell Laboratories
-  - DeepPeep
-  - Federal University of Ceará
-  - Fellow
-  - Information visualization
-  - National Science Foundation
-  - New York Times
-  - New York University Polytechnic School of Engineering
-  - ORCID
-  - Oregon Health & Science University
-  - Provenance
-  - Reproducibility
-  - Stony Brook University
-  - University of Utah
-  - VisTrails
-  references:
-  - http://awards.acm.org/award_winners/freire_nb37655.cfm
-  - http://engineering.nyu.edu/cable/faculty-appointments/2011/november/juliana-freire
-  - http://engineering.nyu.edu/press-release/2015/01/12/nyu-polytechnic-school-engineering-professor-honored-pioneering-work-proven
-  - http://orcid.org/0000-0003-3915-7075
-  - http://vgc.poly.edu/~juliana/
-  - http://www.nsf.gov/discoveries/disc_summ.jsp?org=NSF&cntn_id=114322&preview=false
-  - http://www.nytimes.com/2009/02/23/technology/internet/23search.html
-  - http://www2010.org/www/
-  - https://scholar.google.com/citations?user=sSzAlq0AAAAJ
-  sections: []
-  summary: 'Juliana Freire de Lima e Silva is a Brazilian computer scientist who works
-    as a professor of computer science and engineering at the New York University
-    Polytechnic School of Engineering. She is known for her research in information
-    visualization, data provenance, and computerized assistance for scientific reproducibility.
-
-    Freire did her undergraduate studies at the Federal University of Ceará in Brazil,
-    and earned her doctorate from Stony Brook University. Prior to joining NYU-Poly
-    in 2011, she was a researcher at Bell Laboratories, and a faculty member at the
-    Oregon Health & Science University and the University of Utah.
-
-    Freire''s research projects include the VisTrails scientific workflow management
-    system, and the DeepPeep search engine for web database content.
-
-    Freire was the program co-chair of the WWW2010 conference. In 2014, Freire was
-    elected as a Fellow of the Association for Computing Machinery "for contributions
-    to provenance management research and technology, and computational reproducibility."'
-  url: https://en.wikipedia.org/wiki/Juliana_Freire
+  url: http://en.wikipedia.org/wiki/Center_for_Cosmology_and_Particle_Physics
 - categories:
   - 1960 births
   - All articles lacking reliable references
@@ -525,7 +467,7 @@
 
 
     '
-  url: https://en.wikipedia.org/wiki/Yann_LeCun
+  url: http://en.wikipedia.org/wiki/Yann_LeCun
 - categories:
   - All articles with specifically marked weasel-worded phrases
   - Articles with specifically marked weasel-worded phrases from February 2011
@@ -576,4 +518,4 @@
     after 6 years. He is a member of the editorial boards of the Journal of Machine
     Learning Research (JMLR) and the journal Data Mining and Knowledge Discover. He
     was elected as a founding board member of the International Machine Learning Society.'
-  url: https://en.wikipedia.org/wiki/Foster_Provost
+  url: http://en.wikipedia.org/wiki/Foster_Provost
