--- a/expert-net-mockup-1/Juliana Freire.yaml
+++ b/expert-net-mockup-1/Juliana Freire.yaml
@@ -15,9 +15,9 @@ location:
 contact:
     phone:      n/a
     email:      juliana.freire@nyu.edu
-    website:    http://vgc.poly.edu/~juliana/
+    website:    <a href="http://vgc.poly.edu/~juliana/">Website</a>
     twitter:    n/a
-    linkedin:   https://www.linkedin.com/pub/juliana-freire/0/5b6/a58
+    linkedin:   <a href="https://www.linkedin.com/pub/juliana-freire/0/5b6/a58">LinkedIn</a>
     facebook:   n/a
     github:     n/a
 
